package com.dan.ticketing.transfer;

public class Statistics {
    private Integer totalIssues;
    private Integer openIssues;
    private Integer resolvedIssues;

}
